@@ -2,7 +2,7 @@ $(document).ready(function() {
 
     function loadContent() {
         $('#smart-view-content').html('<img src="++resource++faceted_images/ajax-loader.gif" />');
-        var url = $.param.querystring($.bbq.getState('smartView'), $.param.querystring());
+        var url = $.param.querystring($.bbq.getState('smartTemplate'), $.param.querystring());
         $.get(url, function(data) {
             $('#smart-view-content').html(data);
             $('.listingBar a').each(function(i) {
@@ -13,23 +13,29 @@ $(document).ready(function() {
         }, 'html');
     }
 
-    $('#smart-view-switch a').click(function(e) {
+    $('#smart-view-switch a').live('click', function(e) {
         e.preventDefault();
         $('#smart-view-switch .selected').removeClass('selected');
         $(this).parent().addClass('selected');
         $.bbq.pushState({
-            'smartView': $(this).attr('href')
+            'smartTemplate': $(this).attr('href')
         });
-        loadContent();
-    });
-
-    $(window).bind('hashchange', function(e) {
-        var smartView = $.bbq.getState('smartView');
-        if (smartView) {
-            $('#smart-view-switch a[href=' + smartView + ']').click();
+        // If we run smart view w/o faceted navigation, we make our own
+        // AJAX query
+        if (!Faceted.Window.width) {
+            loadContent();
         }
     });
 
-   $(window).trigger('hashchange'); 
+    $(window).bind('hashchange', function(e) {
+        var smartTemplate = $.bbq.getState('smartTemplate');
+        if (smartTemplate) {
+            $('#smart-view-switch a[href=' + smartTemplate + ']').click();
+        }
+    });
+
+   if (!Faceted.Window.width) {
+       $(window).trigger('hashchange'); 
+   }
 
 });
