@@ -1,2 +1,4 @@
 <metal:block use-macro="here/global_defines/macros/defines" />
-<div metal:use-macro="here/atct_album_view/macros/main"></div>
+<metal:listing-macro define-macro="listing">
+    <div metal:use-macro="here/atct_album_view/macros/listing"></div>
+</metal:listing-macro>
